--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>countries maybe?</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Find Rest Country and neighbours</h1>
-    <label for="">Enter country name</label>
-    <input autocomplete="off" "text" id="countryInput">
-    <br>
-    <br>
-
-    <button type="button" id="searchButton">find</button>
-    <section id="country-info"></section>
-    <section id="bordering-countries"></section>
-    <script type="module" src="script.js"></script>
+    <h1>look up a place</h1>
+    <label>type place name</label>
+    <input id="cInput">
+    <br><br>
+    <button id="btn">go</button>
+    <section id="cStuff"></section>
+    <section id="bStuff"></section>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
